Further dev branch merging tweaks
