# CloudDrive.WebAPI/Model/UpdateFileRequest.cs
@@ -2,7 +2,8 @@
 {
     public class UpdateFileRequest
     {
-        public required IFormFile File { get; set; }
+        public IFormFile? File { get; set; }
         public string? ClientDirPath { get; set; }
+        public required string ClientFileName { get; set; }
     }
 }
